--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+    <!DOCTYPE html>
 <html>
 <head>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" /> 
 </head>
     <body>
-        <div data-role="page" id="loginForm">
+        <div data-role="page" id="loginForm" data-theme="b">
             <form id="form1" name="form1">
                 <input type="text" name="user" id="user" placeholder="Username"/>
 
@@ -18,7 +18,7 @@
             </form>
         </div>
 
-        <div data-role="page" id="home">
+        <div data-role="page" id="homer" data-theme="b">
         	<h1>Your log in works!</h1>
         </div>
     </body>
